--- a/ridematch/templates/ridematch/index.html
+++ b/ridematch/templates/ridematch/index.html
@@ -1,10 +1,5 @@
-<html>
-  <head>
-	  <title>Have A Ride</title>
-	  <meta charset="utf-8">
-	</head>
-	<body>
-	  <p>Hello, world!</p>
-		<p>{{ x }}</p>
-	</body>
-</html>
+{% extends 'base.html' %}
+{% block content %}
+<p>Hello, world!</p>
+<p>{{ x }}</p>
+{% endblock %}
