--- a/ridematch/static/ridematch/css/site_style.css
+++ b/ridematch/static/ridematch/css/site_style.css
@@ -3,7 +3,7 @@
 	clear: both;
 }
 
-.container input {
+form input {
 	width: 100%;
 	clear: both;
 	margin-top: 10px;
@@ -13,3 +13,16 @@
 .container select {
 	margin-top: 10px;
 }
+
+h1,h2,h3 {
+text-align: center;
+vertical-align: middle;
+
+}
+
+p {
+text-align: center;
+vertical-align: middle;
+}
+
+
