--- a/ridematch/static/ridematch/css/site_style.css
+++ b/ridematch/static/ridematch/css/site_style.css
@@ -14,15 +14,63 @@ form input {
 	margin-top: 10px;
 }
 
-h1,h2,h3 {
+h1 {
 text-align: center;
 vertical-align: middle;
+color:#800000;
+font-family: "Palantino", serif;
+font-size: 100px;
+
+}
+
+h2{
+    text-align: center;
+    vertical-align: middle;
+    font-family: "Palantino", serif;
+    margin: 100px;
+
+}   
+
+.col-sm-6{
+   
+    
+}
+
+.row {
+vertical-align: middle;
+text-align: center;
+margin: auto;
+width: 50%;
 
 }
 
 p {
 text-align: center;
 vertical-align: middle;
+font-family: "Palantino", serif;
+font-size: 16px;
+
+}
+
+.btn {
+  display:block;
+  height: 300px;
+  width: 300px;
+  border-radius: 50%;
+  border: 5px;
+  border-style: solid;
+  border-color: #800000;
+  text-align: center;
+  display:table-cell;
+  vertical-align:middle;
+  font-size: 30px;
+  font-family: "Palantino", serif;
+  
+  
+}
+
+.btn a {
+    font-size: 30px ;
 }
 
 
