--- a/ridematch/templates/ridematch/index.html
+++ b/ridematch/templates/ridematch/index.html
@@ -5,70 +5,19 @@
 {% endblock %}
 {% block content %}
 
-<h1> Have-A-Ride </h2>
-            <p> A ride sharing service for tri-co students </p>
-        <h2> Fill out the form to find or share a ride! </h2>
 
-<div class="row">
-        <div class = "col-md-4">
-            <h3>Drivers</h3>
-                <table class="table table-striped">
-                    <thead>
-                        <tr>
-                            <th>Name</th>
-                            <th>Destination</th>
-                            <th>Pick Up Time</th>
-                            <th>Email</th>
-                            <th>Phone Number</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Ian Fisher</td>
-                            <td> Hackathon </td>
-                            <td>14:00</td>
-                            <td>ifisher@haverford.edu</td>
-                        </tr>
-	                </tbody>
-	            </table>
-            </div>
+    <h1> HaveARide </h1>
+    <p> A ride sharing service for tri-co students </p>
+    <h2> Choose your path: </h2>
 
-    <div class = "col-md-4">
-        
-
-	    <form action="" method="post">
-		    {% csrf_token %}
-		    {{ form }}
-		    <input type="submit" value="Submit" />
-	        </form>
-
-        <h3> Or, search from current drivers and riders </h3>
-
-    </div>
-        <div class ="col-md-4">
-            <h3>Riders</h3>
-            <table class="table table-striped">
-                <thead>
-                    <tr>
-                        <th>Name</th>
-                        <th>Destination</th>
-                        <th>Pick Up Time</th>
-                        <th>Email</th>
-                        <th>Phone Number</th>
-                   </tr>
-                </thead>
-                <tbody>
-                    <tr>
-               
-                        <td>John Carter</td>
-                        <td> PMA </td>
-                        <td>11:00</td>
-                        <td>johncarter@mail.com</td>
-                    </tr>
-	            </tbody>
-	        </table>
-        </div>
-    </div>
+   <div class = "row">
+         <div class="col-sm-6">
+            <a href = "{% static 'ridefinder/img/names/jpg'%}" class = "btn btn-default"> Find a ride </a>
+         </div>
+         <div class="col-sm-6">
+            <a href = "{% static 'ridesharer/img/names/jpg'%}" class = "btn btn-default"> Share a ride </a>
+         </div>
+   </div>
 
 
     
