--- a/ridematch/templates/ridematch/index.html
+++ b/ridematch/templates/ridematch/index.html
@@ -12,10 +12,10 @@
 
    <div class = "row">
          <div class="col-sm-6">
-            <a href = "{% static 'ridefinder/img/names/jpg'%}" class = "btn btn-default"> Find a ride </a>
+            <a href="{% url 'ridematch:finder_sharer' 'finder'%}" class = "btn btn-default"> Find a ride </a>
          </div>
          <div class="col-sm-6">
-            <a href = "{% static 'ridesharer/img/names/jpg'%}" class = "btn btn-default"> Share a ride </a>
+            <a href="{% url 'ridematch:finder_sharer' 'sharer' %}" class = "btn btn-default"> Share a ride </a>
          </div>
    </div>
 
