--- a/ridematch/templates/ridematch/thanks.html
+++ b/ridematch/templates/ridematch/thanks.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="container">
-	<h1>Thank you!</h1>
+	
+				<h1>Thank you!</h1>
+			</div>
+		</div>
+	</div>
 </div>
 {% endblock %}
