Make functional improvements to UX

--- a/ridematch/templates/ridematch/tab_form.html
+++ b/ridematch/templates/ridematch/tab_form.html
@@ -18,7 +18,6 @@ $(document).ready(function(){
 					<th>Name</th>
 					<th>Destination</th>
 					<th>Pick Up Time</th>
-					<th>Pick Up Day</th>
 					<th>Email</th>
 					<th>Phone Number</th>
 				</tr>
@@ -28,8 +27,7 @@ $(document).ready(function(){
 				<tr>
 					<td>{{ obj.name }}</td>
 					<td>{{ obj.destination }}</td>
-					<td>{{ obj.time }}</td>
-					<td>{{ obj.day }}</td>
+					<td>{{ obj.date }}</td>
 					<td>{{ obj.email }}</td>
 					<td>{{ obj.phone }}</td>
 				</tr>
