--- a/ridematch/static/ridematch/css/tab_form_style.css
+++ b/ridematch/static/ridematch/css/tab_form_style.css
@@ -8,3 +8,12 @@ form input {
 .row {
 	padding: 20px;
 }
+
+h3{
+font-family: "Palantino", serif;
+text-align: center;
+}
+
+.row{
+    font-family: "Palantino", serif;
+}
