--- a/ridematch/templates/ridematch/thanks.html
+++ b/ridematch/templates/ridematch/thanks.html
@@ -2,9 +2,10 @@
 {% block content %}
 <div class="container">
 	
-				<h1>Thank you!</h1>
-			</div>
-		</div>
-	</div>
+<h1>Thank you!</h1>
+
+<p> An email will be sent to you if a ride matches. You can also check the tables to see if other drivers or passengers are available. </p>
+<p> To get back to the homepage click <a href = "{% url 'ridematch:index' %}"> here </a> </p>
+		
 </div>
 {% endblock %}
